--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="app/index.js"></script>
 </head>
 <body>
   <app-root></app-root>
+  <app-mt-form></app-mt-form>
 </body>
 </html>
